<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">iPauta</string>

    <string name="title_forgot_pass">Recuperar senha</string>
    <string name="title_new_account">Criar nova conta</string>
    <string name="title_new_schedule">Criar nova pauta</string>

    <string name="label_login">Entrar</string>
    <string name="label_new_account"><u>Criar nova conta</u></string>
    <string name="label_forgot_pass"><u>Recuperar senha</u></string>
    <string name="label_stay_logged">Permanecer logado?</string>
    <string name="label_create_user">Criar novo usuário</string>
    <string name="label_recover_pass">Enviar e-mail</string>
    <string name="label_schedule_active">Abertas</string>
    <string name="label_schedule_inactive">Fechadas</string>
    <string name="label_logout">Logout</string>
    <string name="label_create_schedule">Finalizar</string>
    <string name="label_author">Autor:</string>
    <string name="label_close">Fechar</string>
    <string name="label_reopen">Reabrir</string>
    <string name="label_perfil">Perfil</string>

    <string name="hint_password">Senha</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_name">Nome</string>
    <string name="hint_retry_password">Repetir a senha</string>
    <string name="hint_title">Título</string>
    <string name="hint_mini_description">Descrição rápida</string>
    <string name="hint_description">Descrição</string>

    <string name="message_error_email_required">O campo E-mail é obrigatório</string>
    <string name="message_error_pass_required">O campo Senha é obrigatório</string>
    <string name="message_error_field_required">O campo é obrigatório</string>
    <string name="message_error_pass_retry">As senhas não correspondem</string>
    <string name="message_success_create_user">Usuário criado com sucesso</string>
    <string name="message_error_create">Ocorreu um erro tente novamente</string>
    <string name="message_success_recover_pass">Um email vai ser enviado com as instrucões</string>
    <string name="message_error_user_not_found">Usuário não encontrado, verifique os dados</string>
    <string name="message_no_schedules_saved">Não encontramos nenhum item</string>
    <string name="message_new_schedules">Cadastre suas novas pautas no botão +.</string>
    <string name="message_success_create_schedule">Nova pauta cadastrada com sucesso</string>
    <string name="message_success_update_schedule">A pauta foi atualizada com sucesso</string>
    <string name="message_logout">Você foi deslogado, volte sempre</string>

</resources>
